--- a/templates/login.html
+++ b/templates/login.html
@@ -7,16 +7,9 @@
     <title>Login</title>
 </head>
 <body>
-    <!-- {% if error %}
+    {% if error %}
     <p style="color: red;">{{ error }}</p>
-    {% endif %} -->
-    <!-- <form method="post" action="/login">
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="Login">
-    </form> -->
+    {% endif %}
     <div class="container">
         <div class="bt-form-login-simple-1">
             <form class="form" autocomplete="off" method="post" action="/login">
