--- a/templates/login.html
+++ b/templates/login.html
@@ -14,12 +14,12 @@
         <div class="bt-form-login-simple-1">
             <form class="form" autocomplete="off" method="post" action="/login">
                 <div class="form-group">
-                    <label for="email">Email *</label>
+                    <label for="email">Username *</label>
                     <input
                         type="text"
                         name="username"
                         id="username"
-                        placeholder="Email"
+                        placeholder="Username"
                         class="form-input"
                     />
                 </div>
