--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/mdb/css/login.css">
+    <script src="/static/js/login.js"></script>
     <title>Login</title>
 </head>
 <body>
-    {% if error %}
-    <p style="color: red;">{{ error }}</p>
-    {% endif %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                {% if category == 'error' %}
+                    <script>showAlert('{{ message }}');</script>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <div class="container">
         <div class="bt-form-login-simple-1">
             <form class="form" autocomplete="off" method="post" action="/login">
@@ -54,7 +61,7 @@
             </form>
             <div class="form-option">
                 Don&#x27;t have an account?
-                <a href="#">Sign up for free</a>
+                <a href="{{url_for('SignInPage')}}">Sign up for free</a>
             </div>
         </div>
     </div>
