Update check valid input of login and sign in, add remember function

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,18 +8,29 @@
     <title>Login</title>
 </head>
 <body>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                {% if category == 'error' %}
-                    <script>showAlert('{{ message }}');</script>
-                {% endif %}
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
     <div class="container">
         <div class="bt-form-login-simple-1">
             <form class="form" autocomplete="off" method="post" action="/login">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                            {% if category == 'error' %}
+                                <style>
+                                .error-message {
+                                color: #ffffff;
+                                background-color: red;
+                                border-radius: 5px;
+                                padding: 10px;
+                                margin-bottom: 20px;
+                                }
+                                </style>
+                                    <div class="error-message">
+                                        {{ message }}
+                                    </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
                 <div class="form-group">
                     <label for="email">Username *</label>
                     <input
