Update sign in function, update main page

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -63,6 +63,7 @@
                         class="form-input"
                     />
                 </div>
+                <a href="{{url_for('LoginPage')}}">Return to login ?</a>
                 <button type="submit" class="form-btn">
                     Sign in
                 </button>
