--- a/static/css/icon_set_1.css
+++ b/static/css/icon_set_1.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icon_set_1';
-    src: url('../font/icon_set_1.eot?55361665');
-    src: url('../font/icon_set_1.eot?55361665#iefix') format('embedded-opentype'),
-        url('../font/icon_set_1.woff?55361665') format('woff'),
-        url('../font/icon_set_1.ttf?55361665') format('truetype'),
-        url('../font/icon_set_1.svg?55361665#icon_set_1') format('svg');
+    src: url('../fonts/icon_set_1.eot?55361665');
+    src: url('../fonts/icon_set_1.eot?55361665#iefix') format('embedded-opentype'),
+        url('../fonts/icon_set_1.woff?55361665') format('woff'),
+        url('../fonts/icon_set_1.ttf?55361665') format('truetype'),
+        url('../fonts/icon_set_1.svg?55361665#icon_set_1') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -15,7 +15,7 @@
   @media screen and (-webkit-min-device-pixel-ratio:0) {
     @font-face {
       font-family: 'icon_set_1';
-      src: url('../font/icon_set_1.svg?55361665#icon_set_1') format('svg');
+      src: url('../fonts/icon_set_1.svg?55361665#icon_set_1') format('svg');
     }
   }
   */
