--- a/static/mdb/src/scss/free/_flag.scss
+++ b/static/mdb/src/scss/free/_flag.scss
@@ -45,7 +45,7 @@ i.flag {
     width: 16px;
     height: 11px;
     content: '';
-    background: url('https://mdbootstrap.com/img/svg/flags.png') no-repeat -108px -1976px;
+    background: url('https://mdbootstrap.com/images/svg/flags.png') no-repeat -108px -1976px;
   }
 
   /* Flag Sprite Based On http://www.famfamfam.com/lab/icons/flags/ */
