--- a/static/css/fontello.css
+++ b/static/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.eot?32974303');
-    src: url('../font/fontello.eot?32974303#iefix') format('embedded-opentype'),
-        url('../font/fontello.woff?32974303') format('woff'),
-        url('../font/fontello.ttf?32974303') format('truetype'),
-        url('../font/fontello.svg?32974303#fontello') format('svg');
+    src: url('../fonts/fontello.eot?32974303');
+    src: url('../fonts/fontello.eot?32974303#iefix') format('embedded-opentype'),
+        url('../fonts/fontello.woff?32974303') format('woff'),
+        url('../fonts/fontello.ttf?32974303') format('truetype'),
+        url('../fonts/fontello.svg?32974303#fontello') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -15,7 +15,7 @@
   @media screen and (-webkit-min-device-pixel-ratio:0) {
     @font-face {
       font-family: 'fontello';
-      src: url('../font/fontello.svg?32974303#fontello') format('svg');
+      src: url('../fonts/fontello.svg?32974303#fontello') format('svg');
     }
   }
   */
