--- a/static/css/icon_set_2.css
+++ b/static/css/icon_set_2.css
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icon_set_2';
-    src: url('../font/icon_set_2.eot?40207016');
-    src: url('../font/icon_set_2.eot?40207016#iefix') format('embedded-opentype'),
-        url('../font/icon_set_2.woff?40207016') format('woff'),
-        url('../font/icon_set_2.ttf?40207016') format('truetype'),
-        url('../font/icon_set_2.svg?40207016#icon_set_2') format('svg');
+    src: url('../fonts/icon_set_2.eot?40207016');
+    src: url('../fonts/icon_set_2.eot?40207016#iefix') format('embedded-opentype'),
+        url('../fonts/icon_set_2.woff?40207016') format('woff'),
+        url('../fonts/icon_set_2.ttf?40207016') format('truetype'),
+        url('../fonts/icon_set_2.svg?40207016#icon_set_2') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'icon_set_2';
-    src: url('../font/icon_set_2.svg?40207016#icon_set_2') format('svg');
+    src: url('../fonts/icon_set_2.svg?40207016#icon_set_2') format('svg');
   }
 }
 */
