Update template of detail page, data for detail page

--- a/templates/main.html
+++ b/templates/main.html
@@ -155,15 +155,14 @@
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2201"
 									id="menu-item-2201"><a href="#">Blog</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2451"
-									id="menu-item-2451"><a href="#">Vé tham
-										quan</a></li>
+									id="menu-item-2451"><a href="#">Địa điểm</a></li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1478"
 									id="menu-item-1478"><a href="#">Liên hệ</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1458"
 									id="menu-item-1458"><a>Trợ giúp</a>
 									<ul class="sub-menu">
 										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"
-											id="menu-item-1495"><a href="#">Bản đồ</a>
+											id="menu-item-1495"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
 										</li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1484"
 											id="menu-item-1484"><a href="#">Hướng dẫn du
@@ -250,15 +249,7 @@
 							style="z-index: 7; white-space: nowrap; font-size: 25px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Nunito;cursor:pointer;">
 							Discover the endless beauty of Hoan Kiem </div>
 						<!-- LAYER NR. 4 -->
-						<div class="tp-caption rev-btn rev-hiddenicon"
-							data-frames='[{"delay":3430,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(0,0,0,1);bg:rgba(255,255,255,1);bs:solid;bw:0 0 0 0;"}]'
-							data-height="['auto']" data-hoffset="" data-paddingbottom="[10,10,10,10]"
-							data-paddingleft="[30,30,30,30]" data-paddingright="[30,30,30,30]"
-							data-paddingtop="[10,10,10,10]" data-responsive="off" data-responsive_offset="on"
-							data-textalign="['left','left','left','left']" data-type="button" data-voffset="120"
-							data-width="['auto']" data-x="center" data-y="center" id="slide-9-layer-7"
-							style="z-index: 8; white-space: nowrap; font-size: 14px; line-height: 14px; font-weight: 700; color: rgba(255,255,255,1); letter-spacing: px;font-family:Nunito;text-transform:uppercase;background-color:rgba(255, 137, 0, 0.75);border-color:rgba(0,0,0,1);border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;letter-spacing:1px;cursor:pointer;">
-							BOOK TOUR</div>
+						
 					</li>
 					<!-- SLIDE  -->
 					<li data-description="" data-easein="default" data-easeout="default" data-hideafterloop="0"
@@ -303,15 +294,7 @@
 							style="z-index: 7; white-space: nowrap; font-size: 25px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Nunito;cursor:pointer;">
 							Discover the endless beauty of Hoan Kiem </div>
 						<!-- LAYER NR. 8 -->
-						<div class="tp-caption rev-btn rev-hiddenicon"
-							data-frames='[{"delay":3430,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(0,0,0,1);bg:rgba(255,255,255,1);bs:solid;bw:0 0 0 0;"}]'
-							data-height="['auto']" data-hoffset="" data-paddingbottom="[10,10,10,10]"
-							data-paddingleft="[30,30,30,30]" data-paddingright="[30,30,30,30]"
-							data-paddingtop="[10,10,10,10]" data-responsive="off" data-responsive_offset="on"
-							data-textalign="['left','left','left','left']" data-type="button" data-voffset="120"
-							data-width="['auto']" data-x="center" data-y="center" id="slide-1-layer-7"
-							style="z-index: 8; white-space: nowrap; font-size: 14px; line-height: 14px; font-weight: 700; color: rgba(255,255,255,1); letter-spacing: px;font-family:Nunito;text-transform:uppercase;background-color:rgba(255, 137, 0, 0.75);border-color:rgba(0,0,0,1);border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;letter-spacing:1px;cursor:pointer;">
-							BOOK TOUR </div>
+						
 					</li>
 					<!-- SLIDE  -->
 					<li data-description="" data-easein="default" data-easeout="default" data-hideafterloop="0"
@@ -356,15 +339,7 @@
 							style="z-index: 7; white-space: nowrap; font-size: 25px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Nunito;cursor:pointer;">
 							Discover the endless beauty of Hoan Kiem </div>
 						<!-- LAYER NR. 12 -->
-						<div class="tp-caption rev-btn rev-hiddenicon"
-							data-frames='[{"delay":3430,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(0,0,0,1);bg:rgba(255,255,255,1);bs:solid;bw:0 0 0 0;"}]'
-							data-height="['auto']" data-hoffset="" data-paddingbottom="[10,10,10,10]"
-							data-paddingleft="[30,30,30,30]" data-paddingright="[30,30,30,30]"
-							data-paddingtop="[10,10,10,10]" data-responsive="off" data-responsive_offset="on"
-							data-textalign="['left','left','left','left']" data-type="button" data-voffset="120"
-							data-width="['auto']" data-x="center" data-y="center" id="slide-7-layer-7"
-							style="z-index: 8; white-space: nowrap; font-size: 14px; line-height: 14px; font-weight: 700; color: rgba(255,255,255,1); letter-spacing: px;font-family:Nunito;text-transform:uppercase;background-color:rgba(255, 137, 0, 0.75);border-color:rgba(0,0,0,1);border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;letter-spacing:1px;cursor:pointer;">
-							BOOK TOUR </div>
+						
 					</li>
 					<!-- SLIDE  -->
 					<li data-description="" data-easein="default" data-easeout="default" data-hideafterloop="0"
@@ -409,15 +384,7 @@
 							style="z-index: 7; white-space: nowrap; font-size: 25px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Nunito;cursor:pointer;">
 							Discover the endless beauty of Hoan Kiem </div>
 						<!-- LAYER NR. 16 -->
-						<div class="tp-caption rev-btn rev-hiddenicon"
-							data-frames='[{"delay":3430,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(0,0,0,1);bg:rgba(255,255,255,1);bs:solid;bw:0 0 0 0;"}]'
-							data-height="['auto']" data-hoffset="" data-paddingbottom="[10,10,10,10]"
-							data-paddingleft="[30,30,30,30]" data-paddingright="[30,30,30,30]"
-							data-paddingtop="[10,10,10,10]" data-responsive="off" data-responsive_offset="on"
-							data-textalign="['left','left','left','left']" data-type="button" data-voffset="120"
-							data-width="['auto']" data-x="center" data-y="center" id="slide-8-layer-7"
-							style="z-index: 8; white-space: nowrap; font-size: 14px; line-height: 14px; font-weight: 700; color: rgba(255,255,255,1); letter-spacing: px;font-family:Nunito;text-transform:uppercase;background-color:rgba(255, 137, 0, 0.75);border-color:rgba(0,0,0,1);border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;letter-spacing:1px;cursor:pointer;">
-							BOOK TOUR </div>
+						
 					</li>
 				</ul>
 				<script>
@@ -449,42 +416,43 @@
 									<h2>Top <b>Địa</b> Điểm</h2>
 									<p>Địa điểm du lịch ở Quận Hoàn Kiếm, Hà Nội</p>
 								</div>
-	
 							</div>
-							<div class="hotel-list row add-clearfix">
-								{% for place in placeList %}
-									<div class="col-md-4 col-sm-6 wow zoomIn" data-wow-delay="0.1s">
-										<div class="hotel_container">
-											<div class="img_container">
-												<a href="#">
-													<img alt=""
-														class="attachment-ct-list-thumb size-ct-list-thumb wp-post-image"
-														height="267" loading="lazy" sizes="(max-width: 400px) 100vw, 400px"
-														src="/static/images/place/{{place.place_id}}.jpg"
-														width="400" 
-														style="object-fit: cover;"
-														/> 
-													<div class="short_info hotel">
-														{{place.place_address}}
-														<span class="price" style="font-size: 18px; color: aqua;">
-															<span>
-																{% if (place.entry_price)|int != 0 %}
-																	{{ "{:,.0f}".format(place.entry_price) }}<sup>đ</sup>
-																{% else %}
-																	Miễn phí
-																{% endif %}
+								<div class="hotel-list row add-clearfix">
+									<!-- <a href="/detail"> -->
+									{% for place in placeList %}
+										<div class="col-md-4 col-sm-6 wow zoomIn" data-wow-delay="0.1s">
+											<div class="hotel_container">
+												<div class="img_container">
+													<a href="{{ url_for('PlaceDetailPage', place_name=place['place_name']) }}">
+														<img alt=""
+															class="attachment-ct-list-thumb size-ct-list-thumb wp-post-image"
+															height="267" loading="lazy" sizes="(max-width: 400px) 100vw, 400px"
+															src="/static/images/place/{{place.place_id}}.jpg"
+															width="400" 
+															style="object-fit: cover;"
+															/> 
+														<div class="short_info hotel">
+															{{place.place_address}}
+															<span class="price" style="font-size: 18px; color: aqua;">
+																<span>
+																	{% if (place.entry_price)|int != 0 %}
+																		{{ "{:,.0f}".format(place.entry_price) }}<sup>đ</sup>
+																	{% else %}
+																		Miễn phí
+																	{% endif %}
+																</span>
 															</span>
-														</span>
-													</div>
-												</a>
-											</div>
-											<div class="hotel_title">
-												<h3>{{place.place_name}}</h3>
-											</div>
-										</div><!-- End box tour -->
-									</div><!-- End col-md-6 -->
-								{% endfor %}
-							</div>
+														</div>
+													</a>
+												</div>
+												<div class="hotel_title">
+													<h3>{{place.place_name}}</h3>
+												</div>
+											</div><!-- End box tour -->
+										</div><!-- End col-md-6 -->
+									{% endfor %}
+									<!-- </a> -->
+								</div>
 							<div>
 								<p class="text-center add_bottom_30"><a class="btn_1 medium" href="/hotel/"><i
 											class="icon-eye-7"></i>Xem thêm khách sạn</a></p>
@@ -553,7 +521,25 @@
 					</div>
 				</div>
 			</div>
-
+			<div class="main_title">
+				<h2>Blog&nbsp;<b>du lịch</b>&nbsp;Hoàn Kiếm</h2>
+				<p>Những bài viết chia sẻ về kinh nghiệm du lịch Hoàn Kiếm mới nhất</p>
+			</div>
+			<div class="vc_grid-item vc_clearfix vc_col-sm-3 vc_visible-item fadeIn animated">
+				<div class="vc_grid-item-mini vc_clearfix">
+					<div class="vc_gitem-animated-block  vc_gitem-animate vc_gitem-animate-none" data-vc-animation="none">
+						<div class="vc_gitem-zone vc_gitem-zone-a vc-gitem-zone-height-mode-auto vc-gitem-zone-height-mode-auto-1-1 vc_gitem-is-link" style="background-image: url('https://webdulichdanang.com/wp-content/uploads/2020/02/hoang-hon-ba-na.jpg') !important;"><a href="https://webdulichdanang.com/bang-gia-ve-ba-na-hill-moi-nhat-cap-nhat-thuong-xuyen.html" title="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên" class="vc_gitem-link vc-zone-link"></a><img src="https://webdulichdanang.com/wp-content/uploads/2020/02/hoang-hon-ba-na.jpg" class="vc_gitem-zone-img" alt="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên"><div class="vc_gitem-zone-mini"><div class="vc_gitem_row vc_row vc_gitem-row-position-middle"><div class="vc_col-sm-12 vc_gitem-col vc_gitem-col-align-"><div class="vc_custom_heading vc_gitem-post-data vc_gitem-post-data-source-post_date"><h3 style="font-size: 22px;color: #ffffff;text-align: center;font-family:Ubuntu Condensed;font-weight:400;font-style:normal"><a href="https://webdulichdanang.com/bang-gia-ve-ba-na-hill-moi-nhat-cap-nhat-thuong-xuyen.html" class="vc_gitem-link" title="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên">16/02/2023</a></h3></div><div class="vc_custom_heading vc_gitem-post-data vc_gitem-post-data-source-post_title"><h3 style="font-size: 22px;color: #ffffff;text-align: center;font-family:Roboto Condensed;font-weight:700;font-style:normal"><a href="https://webdulichdanang.com/bang-gia-ve-ba-na-hill-moi-nhat-cap-nhat-thuong-xuyen.html" class="vc_gitem-link" title="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên">Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên</a></h3></div></div></div></div></div><div class="vc_gitem-zone vc_gitem-zone-b vc_custom_1419253765784 vc-gitem-zone-height-mode-auto vc_gitem-is-link"><a href="https://webdulichdanang.com/bang-gia-ve-ba-na-hill-moi-nhat-cap-nhat-thuong-xuyen.html" title="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên" class="vc_gitem-link vc-zone-link"></a>
+							<div class="vc_gitem-zone-mini">
+								A
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="vc_clearfix">
+					H
+				</div>
+			</div>
+			
 			<div class="vc_row wpb_row vc_row-fluid margin_60 inner-container">
 				<div class="container">
 					<div class="row">
@@ -600,7 +586,7 @@
 											<div class="ct-icon-box feature_home"><i class="icon_set_1_icon-57"></i>
 												<h4 style="text-align: center; font-weight: bold;"><b>Hỗ
 														trợ</b> 24/7/365</h4>
-												<p class="">Với chatbox giúp du khách có thể nhận được sự hỗ trợ và tư vấn ngay lập tức mọi lúc, mọi nơi, dù ở bất kỳ thời gian và nơi đâu.</p>
+												<p class="">Với chatbot giúp du khách có thể nhận được sự hỗ trợ và tư vấn ngay lập tức mọi lúc, mọi nơi, dù ở bất kỳ thời gian và nơi đâu.</p>
 												<p><a class="btn_1 outline"
 														href="#S">Chi tiết</a>
 												</p>
@@ -653,9 +639,9 @@
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1909"
 									id="menu-item-1909"><a href="#">Blog</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2694"
-									id="menu-item-2694"><a href="#">Vé tham quan</a></li>
+									id="menu-item-2694"><a href="#">Địa điểm</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1910"
-									id="menu-item-1910"><a href="#">Bản đồ</a></li>
+									id="menu-item-1910"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1289"
 									id="menu-item-1289"><a href="#">Liên hệ</a></li>
 							</ul>
